# buup.io

./: CHANGELOG.md  CNAME  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  update_artifacts.rs  update_readme.rs  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml  gh-pages.yml  release.yml  rust.yml  update-readme.yml
assets/: apple-touch-icon-c988b5e93e5625d0.png.br  buup-icon-5e33615b9f24794f.svg.br  buup_web-08572299831c6c1b.js  buup_web-08572299831c6c1b.js.br  buup_web-092cb7b4fe0eedfa.js  buup_web-092cb7b4fe0eedfa.js.br  buup_web-115fffb34b8a74c1.js  buup_web-115fffb34b8a74c1.js.br  buup_web-1486d49f6bed9c91.js  buup_web-1486d49f6bed9c91.js.br  buup_web-334b89553f00bdff.js  buup_web-334b89553f00bdff.js.br  buup_web-349122c40c7fd92e.js  buup_web-349122c40c7fd92e.js.br  buup_web-3c6d95c9231e35ea.js  buup_web-3c6d95c9231e35ea.js.br  buup_web-42fd3b52cb687afa.js  buup_web-42fd3b52cb687afa.js.br  buup_web-479eafbd7feacefd.js  buup_web-479eafbd7feacefd.js.br  buup_web-56639527469b191e.js  buup_web-56639527469b191e.js.br  buup_web-57f2405846c75093.js  buup_web-57f2405846c75093.js.br  buup_web-5af020a099c81af9.js  buup_web-5af020a099c81af9.js.br  buup_web-5b81fb6cfeef1436.js  buup_web-5b81fb6cfeef1436.js.br  buup_web-742388f90f8dca96.js  buup_web-742388f90f8dca96.js.br  buup_web-764607ad31a6b598.js  buup_web-764607ad31a6b598.js.br  buup_web-99ac3416b49ff855.js  buup_web-99ac3416b49ff855.js.br  buup_web-a21e8d49fffaa024.js  buup_web-a21e8d49fffaa024.js.br  buup_web-b6c627fb97a729b1.js  buup_web-b6c627fb97a729b1.js.br  buup_web-b6c943877cf92a58.js  buup_web-b6c943877cf92a58.js.br  (+80 more)
buup_cli/: Cargo.toml  README.md
buup_cli/src/: main.rs
buup_web/: Cargo.toml  Dioxus.toml  README.md  build.rs
buup_web/assets/: robots.txt  site.webmanifest  sitemap.xml
buup_web/src/: main.rs  styles.rs
src/: App.tsx  cli.rs  custom.d.ts  lib.rs  theme.ts  types.ts
src/components/: ThemeToggle.tsx  TransformPanel.tsx  TransformSelector.tsx
src/transformers/: ascii_to_hex.rs  base64.ts  base64ToHex.ts  base64_decode.rs  base64_encode.rs  bin_to_dec.rs  bin_to_hex.rs  binary_decode.rs  binary_encode.rs  camel_to_snake.rs  caseConverters.ts  color_code_convert.rs  color_code_convert_inverse.rs  csvToJson.ts  csv_to_json.rs  datetime.ts  dec_to_bin.rs  dec_to_hex.rs  deflate_compress.rs  deflate_decompress.rs  examples.md  gzip_compress.rs  gzip_decompress.rs  hex_decode.rs  hex_encode.rs  hex_to_ascii.rs  hex_to_bin.rs  hex_to_dec.rs  hex_to_hsl.rs  hex_to_rgb.rs  hsl_to_hex.rs  hsl_to_rgb.rs  htmlEncodeDecode.ts  html_decode.rs  html_encode.rs  html_to_markdown.rs  js_formatter.rs  js_minifier.rs  jsonFormatMinify.ts  json_formatter.rs  (+37 more)
src/transformers/__tests__/: base64.test.ts  base64ToHex.test.ts  caseConverters.test.ts  csvToJson.test.ts  datetime.test.ts  htmlEncodeDecode.test.ts  jsonFormatMinify.test.ts  jwtDecode.test.ts  markdownToHtml.test.ts  numberBaseConverter.test.ts  textHash.test.ts  urlEncodeDecode.test.ts  uuidGenerator.test.ts
src/utils/: color.rs  crc32.rs  mod.rs  transformerLoader.ts
