[package]
name = "buup"
version = "0.3.0"
authors = ["Ben Letchford <me@benletchford.com>"]
edition = "2021"
description = "Core transformation library with zero dependencies"
license = "MIT"
documentation = "https://github.com/benletchford/buup"
homepage = "https://buup.letchford.cloud"
repository = "https://github.com/benletchford/buup"
include = ["src", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[dependencies]
# Strictly no external dependencies

[workspace]
members = ["buup_cli", "buup_web"]

[[bin]]
name = "update_readme"
path = "update_readme.rs"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
