[package]
name = "buup"
version = "0.12.0"
authors = ["Ben Letchford <me@benletchford.com>"]
edition = "2021"
description = "Core transformation library with zero dependencies"
license = "MIT"
documentation = "https://github.com/benletchford/buup"
homepage = "https://buup.io"
repository = "https://github.com/benletchford/buup"
include = ["src", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[dependencies]
# Strictly no external dependencies

[workspace]
members = ["buup_web"]

[[bin]]
name = "buup"
path = "src/cli.rs"

# Utility to update the README.md file with the latest info
[[bin]]
name = "update_readme"
path = "update_readme.rs"

[profile]

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
