[package]
name = "buup_web"
version = "0.25.0"
authors = ["Ben Letchford <me@benletchford.com>"]
edition = "2021"
description = "Web UI for Buup text transformation utilities"
repository = "https://github.com/benletchford/buup"

[dependencies]
buup = { path = ".." }
dioxus = { version = "0.6.3", features = ["web"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2.104"
js-sys = "0.3.81"
serde = "1.0.228"
serde_json = "1.0.145"
web-sys = { version = "0.3.81", features = [
    "Window",
    "Document",
    "Element",
    "CustomEvent",
    "EventListener",
    "EventTarget",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
